Properly align items in FilteredOptions. Fixes issue with out-of-alignment checkmarks.

--- a/@navikt/core/css/form/combobox.css
+++ b/@navikt/core/css/form/combobox.css
@@ -248,6 +248,7 @@
 .navds-combobox__list-item--no-options,
 .navds-combobox__list-item--new-option,
 .navds-combobox__list-item--max-selected {
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
